30-03-2025 : Quiz mulheres notáveis

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,10 @@ p {
 }
 
 body {
-  display: grid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   height: 100vh;
 }
 
