--- a/src/sass/4-pages/_home.sass
+++ b/src/sass/4-pages/_home.sass
@@ -12,6 +12,9 @@
     @media( max-width: 570px )
         padding: 10px
 
+    @media( max-width: 405px )
+    padding: 10px
+
     &-card
         background-color: variables.$bg-card
         @include mixins.card($width: 370px, $height: auto, $border-radius: 20px, $padding: 23px)
@@ -22,3 +25,4 @@
     margin: 0 auto
 
 .trofeu
+    margin: 0 auto
