--- a/src/sass/4-pages/_questions.sass
+++ b/src/sass/4-pages/_questions.sass
@@ -12,7 +12,6 @@
 
     &-card
         background-color: variables.$bg-card
-        @include mixins.card($width: 514px, $height: 50%, $border-radius: 20px, $padding: 23px)
+        @include mixins.card($width: 514px, $height: auto, $border-radius: 20px, $padding: 23px)
         text-align: center
-        @include mixins.center($display: grid)
 
