--- a/src/App.css
+++ b/src/App.css
@@ -42,11 +42,10 @@ p {
 }
 
 body {
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  height: 100vh;
 }
 
 button {
@@ -135,6 +134,7 @@ button {
   gap: 10px;
   height: 100vh;
   width: 100%;
+  padding: 10px;
 }
 @media (max-width: 28.43rem) {
   .div-container-home {
@@ -164,6 +164,10 @@ button {
   margin: 0 auto;
 }
 
+.trofeu {
+  margin: 0 auto;
+}
+
 .section-container {
   display: grid;
   justify-content: center;
@@ -184,15 +188,11 @@ button {
 .section-container-card {
   background-color: #000;
   max-width: 514px;
-  height: 50%;
+  height: auto;
   border-radius: 20px;
   padding: 23px;
   margin: 0;
   text-align: center;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
 }
 
 .div-content-feedback {
@@ -210,16 +210,11 @@ button {
   align-items: center;
   gap: 10px;
   height: 100vh;
-  width: 100%;
+  justify-content: center;
 }
 @media (max-width: 28.43rem) {
   .div-container-feedback {
     padding: 20px;
-  }
-}
-@media (max-width: 570px) {
-  .div-container-feedback {
-    padding: 10px;
   }
 }
 .div-container-feedback-card {
@@ -227,8 +222,8 @@ button {
   max-width: 514px;
   height: auto;
   border-radius: 20px;
-  padding: 23px;
-  margin: 0;
+  padding: 11px;
+  margin: 11px;
   text-align: center;
   display: grid;
   justify-content: center;
